--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @continuum-restore 'on'
-
+set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '1'
 set -g status-right 'Continuum status: #{continuum_status}'
 # Other examples:
