--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @continuum-restore 'on'
+set -g @resurrect-processes 'btop'
+set -g @resurrect-processes 'mc'
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '1'
 set -g status-right 'Continuum status: #{continuum_status}'
