--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set-option -g prefix C-s
 bind v split-window -v
 bind h split-window -h
 bind a command-prompt -I "#W" "rename-window '%%'"
-set -g mouse on
+#set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
