tmux: Change hot keys for split
Hotkeys were unintuitive to use. Fixed this by swapping hotkeys for
splitting window vertically and horizontally.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 set -g base-index 1 # Numbering of windows
 setw -g pane-base-index 1 # Numbering of Panes
 set-option -g prefix C-s
-bind v split-window -v
-bind h split-window -h
+bind v split-window -h
+bind h split-window -v
 bind a command-prompt -I "#W" "rename-window '%%'"
 #set -g mouse on
 
