vim: lsp: clangd works, rust doesnt give an error
Clangd works now. rust analyzer doesn't seem to do anything but it does
not give error when opening files.

irssi theme changed as well

--- a/.irssi/config
+++ b/.irssi/config
@@ -314,5 +314,5 @@ statusbar = {
 };
 settings = {
   core = { real_name = "Kalle Niemi"; user_name = "kale"; nick = "kale"; };
-  "fe-common/core" = { theme = "default"; };
+  "fe-common/core" = { theme = "bluu"; };
 };
